WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176287
DOMMatrix/DOMMatrixReadOnly validation is incorrect for NaN values
https://bugs.webkit.org/show_bug.cgi?id=176287
Summary
DOMMatrix/DOMMatrixReadOnly validation is incorrect for NaN values
Sam Weinig
Reported
2017-09-02 19:30:39 PDT
DOMMatrix/DOMMatrixReadOnly validation is incorrect for NaN values
Attachments
Patch
(4.52 KB, patch)
2017-09-02 19:33 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2017-09-02 19:33:55 PDT
Created
attachment 319751
[details]
Patch
Chris Dumez
Comment 2
2017-09-02 20:35:03 PDT
Comment on
attachment 319751
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2017-09-02 21:05:03 PDT
Comment on
attachment 319751
[details]
Patch Clearing flags on attachment: 319751 Committed
r221545
: <
http://trac.webkit.org/changeset/221545
>
WebKit Commit Bot
Comment 4
2017-09-02 21:05:05 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5
2017-09-05 08:54:09 PDT
Comment on
attachment 319751
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319751&action=review
> Source/WebCore/css/DOMMatrixReadOnly.cpp:99 > +static bool sameValueZero(double a, double b)
It may be in the spec, but I find the name of this very confusing, and not at all memorable. Also, should it go into MathExtras.h?
Sam Weinig
Comment 6
2017-09-05 10:34:18 PDT
(In reply to Simon Fraser (smfr) from
comment #5
)
> Comment on
attachment 319751
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=319751&action=review
> > > Source/WebCore/css/DOMMatrixReadOnly.cpp:99 > > +static bool sameValueZero(double a, double b) > > It may be in the spec, but I find the name of this very confusing, and not > at all memorable. Also, should it go into MathExtras.h?
I agree the name's not good. Have any ideas for a better one? I'm not a fan of putting things in MathExtras.h (or other shared places) that are only used in one place (though I admit its a bit of a chicken and the egg. If it's not in the shared place, how will people know about it?) Happy to move it if we can come up with a non-terrible name.
Simon Fraser (smfr)
Comment 7
2017-09-05 11:12:27 PDT
(In reply to Sam Weinig from
comment #6
)
> (In reply to Simon Fraser (smfr) from
comment #5
) > > Comment on
attachment 319751
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=319751&action=review
> > > > > Source/WebCore/css/DOMMatrixReadOnly.cpp:99 > > > +static bool sameValueZero(double a, double b) > > > > It may be in the spec, but I find the name of this very confusing, and not > > at all memorable. Also, should it go into MathExtras.h? > > I agree the name's not good. Have any ideas for a better one? I'm not a fan > of putting things in MathExtras.h (or other shared places) that are only > used in one place (though I admit its a bit of a chicken and the egg. If > it's not in the shared place, how will people know about it?) > > Happy to move it if we can come up with a non-terrible name.
nanEquivalentCompare() or something?
Radar WebKit Bug Importer
Comment 8
2017-09-27 12:58:42 PDT
<
rdar://problem/34694412
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug