DOMMatrix/DOMMatrixReadOnly validation is incorrect for NaN values https://bugs.webkit.org/show_bug.cgi?id=176287

Patch by Sam Weinig <sam@webkit.org> on 2017-09-02
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/css/geometry-1/DOMMatrixInit-validate-fixup-expected.txt:
Update test results.

Source/WebCore:

* css/DOMMatrixReadOnly.cpp:
(WebCore::sameValueZero): Added.
(WebCore::DOMMatrixReadOnly::validateAndFixup):

    Switch from using standard != to added sameValueZero helper
    which implements https://tc39.github.io/ecma262/#sec-samevaluezero

Canonical link: https://commits.webkit.org/192926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221545 268f45cc-cd09-0410-ab3c-d52691b4dbfc